--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   # - title: "Portfolio"
   #  url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /posts/
+  # - title: "Blog Posts"
+  #  url: /posts/
 
   # - title: "Problems"
   #   url: /problems/
